Bug 230862 - KDevelop clears all editor bookmarks after restart
Summary: KDevelop clears all editor bookmarks after restart
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: All editors (other bugs)
Version First Reported In: git master
Platform: openSUSE Linux
: HI normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
: 187247 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-03-15 19:04 UTC by Alexander
Modified: 2012-03-02 08:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3
Sentry Crash Report:


Attachments
Quick and dirty fix (1.92 KB, patch)
2012-02-19 22:34 UTC, Lambert Clara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander 2010-03-15 19:04:21 UTC
Version:           SVN (using KDE 4.4.1)
OS:                Linux
Installed from:    openSUSE RPMs

KDevelop/kdevplatform SVN of 2010-03-15.

To reproduce:
Start KDevelop, open some project, open some file from it, place an editor bookmark (ctrl-B).
Restart KDevelop - the bookmark is gone.
Comment 1 Andreas Pakulat 2010-03-15 20:42:47 UTC
bookmarks are handled completely inside katepart, re-assigning.
Comment 2 Christoph Cullmann 2010-05-15 19:31:51 UTC
katepart will remember them, if you do read/writeSessionConfig for the documents/views, kate app does so and it works here, for KDE 4.4 and higher.
Comment 3 Shaun Reich 2010-05-28 23:57:41 UTC
*** Bug 187247 has been marked as a duplicate of this bug. ***
Comment 4 Merkel 2010-10-27 17:06:38 UTC
*** This bug has been confirmed by popular vote. ***
Comment 5 Dominik Haumann 2010-10-27 23:12:22 UTC
Reassigning back to KDevelop, see comment #2.
Comment 7 Milian Wolff 2011-08-10 11:37:33 UTC
*** Bug 279793 has been marked as a duplicate of this bug. ***
Comment 8 Lambert Clara 2012-02-19 22:34:56 UTC
Created attachment 68941 [details]
Quick and dirty fix
Comment 9 Milian Wolff 2012-03-02 08:57:06 UTC
Git commit 0fb6c9c8be754919bd72ca442283e39609284146 by Milian Wolff, on behalf of Lambert Clara.
Committed on 01/03/2012 at 20:51.
Pushed by mwolff into branch '1.3'.

Save and reload settings exposed by katepart per file

Settings concerned :
- Bookmarks
- Folding
- Opening mode (rw, ro)
- Encoding

this backports 11299e59e7 from master
REVIEW: 104085
FIXED-IN: 1.3

M  +43   -0    shell/textdocument.cpp
M  +1    -0    shell/textdocument.h

http://commits.kde.org/kdevplatform/0fb6c9c8be754919bd72ca442283e39609284146