Save and reload settings exposed by katepart per file

Settings concerned :
- Bookmarks
- Folding
- Opening mode (rw, ro)
- Encoding

BUG: 230862
REVIEW: 104085